books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -42,9 +42,10 @@ String reverse(int b, int e, String str) {
 			builder.append(str.[i])
 		} else {
 			int mid = e-i / 2 ; 
-			for(int j = i; j <= e; j++){
-				switch(i, target.size()-i, target);
+			for(int j = i; j < mid; j++){
+				switch(j, e-j, strArr);
 			}
+			i
 		}
 	}
 	String head = str.subString(0,b);
@@ -70,5 +71,5 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNjUyNzUxMDUsMTg2NTgwOTE3MF19
+eyJoaXN0b3J5IjpbLTM3OTM1MzAwMSwxODY1ODA5MTcwXX0=
 -->
