books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -30,11 +30,10 @@ void switch(int from, int to, String[] arr){
 	arr[to] = temp;
 }
 ```
-생각해보니 더 개선이 가능하겠다.
+생각해보니 아래와 같이 개선이 가능하겠다. 거꾸로 하는 알고리즘이 
 
-``` // myAnswer
+``` // 
 String reverse(int b, int e, String str) {
-	
 	StrinBuilder builder = new StringBuilder();
 	char[] strArr = str.toArray();
 	for(int i = 0; i < target.size(); i++){
@@ -45,12 +44,10 @@ String reverse(int b, int e, String str) {
 			for(int j = i; j < mid; j++){
 				switch(j, e-j, strArr);
 			}
-			i
+			i = e;
 		}
 	}
-	String head = str.subString(0,b);
-	String tail = str.subString(e,target.size());
-	return head + target + tail;
+	return builder.toString();
 }
 
 void switch(int from, int to, String[] arr){
@@ -71,5 +68,5 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTM3OTM1MzAwMSwxODY1ODA5MTcwXX0=
+eyJoaXN0b3J5IjpbLTQ1NDQ5ODM2NCwxODY1ODA5MTcwXX0=
 -->
