books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -1,10 +1,10 @@
 # 네이버 페이 1차 면접
 
-## 자기소개 한번!
-
-## 경력 프로젝트에 대해서
+## 자기소개와 해왔던 프로젝트에 대해서
 
 ## 도메인 아키텍쳐에 대해
+
+내가한 서비스에 대한 아키텍쳐를 그림과 설명을 함께 설명해보자. 
 
 ## 코딩 테스트
 아래와 같은 메서드 시그니처가 주어 진다. 
@@ -30,7 +30,7 @@ void switch(int from, int to, String[] arr){
 	arr[to] = temp;
 }
 ```
-생각해보니 아래와 같이 개선이 가능하겠다. 거꾸로 하는 알고리즘이 
+생각해보니 아래와 같이 개선이 가능하겠다. 거꾸로 하는 알고리즘이 $O(n/2)$만인것을 생각해서 급하게 짜다보니 놓친 부분이 있다. 
 
 ``` // 
 String reverse(int b, int e, String str) {
@@ -68,5 +68,5 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ1NDQ5ODM2NCwxODY1ODA5MTcwXX0=
+eyJoaXN0b3J5IjpbLTk1NzYyNDYwMCwxODY1ODA5MTcwXX0=
 -->
