books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -16,6 +16,7 @@ String reverse(int b, int e, String str) { ... }
 ``` // myAnswer
 String reverse(int b, int e, String str) {
 	String [] target = str.subString(b,e).toArray();
+	// 문자열.toCharArray() 메서드가 있네 ㅠㅠ
 	for(int i = 0; i < (target.size()-1) / 2; i++){
 		switch(i, target.size()-i, target);
 	}
@@ -68,5 +69,6 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk1NzYyNDYwMCwxODY1ODA5MTcwXX0=
+eyJoaXN0b3J5IjpbLTI4OTg3NzczLC05NTc2MjQ2MDAsMTg2NT
+gwOTE3MF19
 -->
