--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -15,14 +15,13 @@ String reverse(int b, int e, String str) { ... }
 
 ``` // myAnswer
 String reverse(int b, int e, String str) {
-	String [] target = str.subString(b,e).toArray();
-	// 문자열.toCharArray() 메서드가 있네 ㅠㅠ
+	String [] target = str.subString(b,e).toArray();// 문자열.toCharArray() 메서드가 있네 ㅠㅠ
 	for(int i = 0; i < (target.size()-1) / 2; i++){
 		switch(i, target.size()-i, target);
 	}
 	String head = str.subString(0,b);
 	String tail = str.subString(e,target.size());
-	return head + target + tail;
+	return head + target + tail; //type이 안맞아ㅠㅠ String.valueOf(char[]in)을 하면 된다.
 }
 
 void switch(int from, int to, String[] arr){
@@ -69,6 +68,6 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI4OTg3NzczLC05NTc2MjQ2MDAsMTg2NT
-gwOTE3MF19
+eyJoaXN0b3J5IjpbMTI5MTgyNjc3NiwtMjg5ODc3NzMsLTk1Nz
+YyNDYwMCwxODY1ODA5MTcwXX0=
 -->
