books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -57,9 +57,10 @@ void switch(int from, int to, String[] arr){
 }
 ```
 
-
-
 ## 자신의 강점
+
+티몬에서 많은 레거시 코드를 많이 접했다. 처음에는 굉장히 
+
 
 ## 하고픈 말
 
@@ -68,6 +69,6 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI5MTgyNjc3NiwtMjg5ODc3NzMsLTk1Nz
+eyJoaXN0b3J5IjpbMTQ1MjQwMjc2MSwtMjg5ODc3NzMsLTk1Nz
 YyNDYwMCwxODY1ODA5MTcwXX0=
 -->
