books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -59,7 +59,7 @@ void switch(int from, int to, String[] arr){
 
 ## 자신의 강점
 
-티몬에서 많은 레거시 코드를 많이 접했다. 처음에는 굉장히 
+티몬에서 많은 레거시 코드를 많이 접했다. 처음에는 다른 사람의 코드를 보는게 굉장히 어려웠지만 이해하고자 노력을 하니 차츰차츰 코드를 분석하는 과정이 재밌고 수월해졌다. 다행히 코드를 읽는 것이 저의 적성과 맞는것 같습니다. 
 
 
 ## 하고픈 말
@@ -69,6 +69,6 @@ void switch(int from, int to, String[] arr){
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1MjQwMjc2MSwtMjg5ODc3NzMsLTk1Nz
+eyJoaXN0b3J5IjpbMjA1OTk3NjIyMiwtMjg5ODc3NzMsLTk1Nz
 YyNDYwMCwxODY1ODA5MTcwXX0=
 -->
