books/programming-interview/20191216.md updated from https://stackedit.io/

--- a/books/programming-interview/20191216.md
+++ b/books/programming-interview/20191216.md
@@ -63,13 +63,13 @@ void switch(int from, int to, String[] arr){
 
 ## 하고픈 말
 
-> 네이버 파이낸셜
+> 네이버 파이낸셜의 주요 서비스는 무엇인지? 어떻게 구성되어 있는지? 
 
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg0NTUzNzcxNiwtMjg5ODc3NzMsLTk1Nz
-YyNDYwMCwxODY1ODA5MTcwXX0=
+eyJoaXN0b3J5IjpbLTMzOTcwNjgyNSwtODQ1NTM3NzE2LC0yOD
+k4Nzc3MywtOTU3NjI0NjAwLDE4NjU4MDkxNzBdfQ==
 -->
