algorithms/조합 탐색.md updated from https://stackedit.io/

--- a/algorithms/조합 탐색.md
+++ b/algorithms/조합 탐색.md
@@ -158,16 +158,18 @@ $$w(f) >=w(e)$$
 
 ## 게임판 덮기(BOARDERCOVER2)
 
+
+
 ## 알러지가 심한 친구들(ALLERGY)
 
 ## 카쿠로(KAKURO2)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU4NjQ2MDY1MCwtNDI1ODc4ODQ5LC0xNT
-YxNjIxNDg3LC05MTU5ODM1NDQsLTE5MTA4MDQ5ODIsLTIwOTgy
-ODEyNTIsOTM0MjA1NTY4LC0xNzEwODExMjY1LC0yODQ4MjM5MD
-QsLTMzMTkzNjI3Niw2NDgwMjM3MTEsLTI2MjIzMDU4NCwyNDI1
-NjExNzUsLTEwODgyNDk1MjMsNDE4MDA4NTczLDk3MzExODU0NC
-wtNDA0MDgyMDgsOTc1MDA5Nzk0LDU3MzA1MjQ1NywtOTA3NzEx
-MTg1XX0=
+eyJoaXN0b3J5IjpbLTE4MTY3NDIwMzAsLTU4NjQ2MDY1MCwtND
+I1ODc4ODQ5LC0xNTYxNjIxNDg3LC05MTU5ODM1NDQsLTE5MTA4
+MDQ5ODIsLTIwOTgyODEyNTIsOTM0MjA1NTY4LC0xNzEwODExMj
+Y1LC0yODQ4MjM5MDQsLTMzMTkzNjI3Niw2NDgwMjM3MTEsLTI2
+MjIzMDU4NCwyNDI1NjExNzUsLTEwODgyNDk1MjMsNDE4MDA4NT
+czLDk3MzExODU0NCwtNDA0MDgyMDgsOTc1MDA5Nzk0LDU3MzA1
+MjQ1N119
 -->
