algorithms/조합 탐색.md updated from https://stackedit.io/

--- a/algorithms/조합 탐색.md
+++ b/algorithms/조합 탐색.md
@@ -156,8 +156,9 @@ $$w(f) >=w(e)$$
 
 실제로 TSP만을 해결하기 위해 고안된 프로그램들은 정수 계획법(Linear Programming, LP)의 일종으로 , 다항 시간내에 푸는 알로리즘은 아직 없지만 효율적으로 해결하기 위한 다양한 연구가 이루어져 있다. 
 
-## 게임판 덮기(BOARDERCOVER2)
+## [게임판 덮기(BOARDERCOVER2)](https://algospot.com/judge/problem/read/BOARDCOVER2)
 
+H×W 크기의 게임판과 한 가지 모양의 블록이 여러 개 있습니다. 게임판에 가능한 많은 블록을 올려놓고 싶은데, 게임판은 검은 칸과 흰 칸으로 구성된 격자 모양을 하고 있으며 이 중에서 흰 칸에만 블록을 올려놓을 수 있습니다. 이때 블록들은 자유롭게 회전해서 놓을 수 있지만, 서로 겹치거나, 격자에 어긋나게 덮거나, 검은 칸을 덮거나, 게임판 밖으로 나가서는 안 됩니다.
 
 
 ## 알러지가 심한 친구들(ALLERGY)
@@ -165,11 +166,11 @@ $$w(f) >=w(e)$$
 ## 카쿠로(KAKURO2)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MTY3NDIwMzAsLTU4NjQ2MDY1MCwtND
-I1ODc4ODQ5LC0xNTYxNjIxNDg3LC05MTU5ODM1NDQsLTE5MTA4
-MDQ5ODIsLTIwOTgyODEyNTIsOTM0MjA1NTY4LC0xNzEwODExMj
-Y1LC0yODQ4MjM5MDQsLTMzMTkzNjI3Niw2NDgwMjM3MTEsLTI2
-MjIzMDU4NCwyNDI1NjExNzUsLTEwODgyNDk1MjMsNDE4MDA4NT
-czLDk3MzExODU0NCwtNDA0MDgyMDgsOTc1MDA5Nzk0LDU3MzA1
-MjQ1N119
+eyJoaXN0b3J5IjpbLTg4NTIwMDI1MywtMTgxNjc0MjAzMCwtNT
+g2NDYwNjUwLC00MjU4Nzg4NDksLTE1NjE2MjE0ODcsLTkxNTk4
+MzU0NCwtMTkxMDgwNDk4MiwtMjA5ODI4MTI1Miw5MzQyMDU1Nj
+gsLTE3MTA4MTEyNjUsLTI4NDgyMzkwNCwtMzMxOTM2Mjc2LDY0
+ODAyMzcxMSwtMjYyMjMwNTg0LDI0MjU2MTE3NSwtMTA4ODI0OT
+UyMyw0MTgwMDg1NzMsOTczMTE4NTQ0LC00MDQwODIwOCw5NzUw
+MDk3OTRdfQ==
 -->
