--- a/algorithms/조합 탐색.md
+++ b/algorithms/조합 탐색.md
@@ -160,17 +160,20 @@ $$w(f) >=w(e)$$
 
 H×W 크기의 게임판과 한 가지 모양의 블록이 여러 개 있습니다. 게임판에 가능한 많은 블록을 올려놓고 싶은데, 게임판은 검은 칸과 흰 칸으로 구성된 격자 모양을 하고 있으며 이 중에서 흰 칸에만 블록을 올려놓을 수 있습니다. 이때 블록들은 자유롭게 회전해서 놓을 수 있지만, 서로 겹치거나, 격자에 어긋나게 덮거나, 검은 칸을 덮거나, 게임판 밖으로 나가서는 안 됩니다.
 
+![enter image description here](http://algospot.com/media/judge-attachments/556e7cbd2262a90832a95e0106df50bd/boardcover2.png)
+
+위 그림은 예제 게임판과 L 자 모양의 블록으로 이 게임판을 덮는 방법을 보여줍니다. 게임판에는 15개의 흰 칸이 있고, 한 블록은 네 칸을 차지하기 때문에 그림과 같이 최대 세 개의 블록을 올려놓을 수 있지요. 게임판과 블록의 모양이 주어질 때 최대 몇 개의 블록을 올려놓을 수 있는지 판단하는 프로그램을 작성하세요.
 
 ## 알러지가 심한 친구들(ALLERGY)
 
 ## 카쿠로(KAKURO2)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4NTIwMDI1MywtMTgxNjc0MjAzMCwtNT
-g2NDYwNjUwLC00MjU4Nzg4NDksLTE1NjE2MjE0ODcsLTkxNTk4
-MzU0NCwtMTkxMDgwNDk4MiwtMjA5ODI4MTI1Miw5MzQyMDU1Nj
-gsLTE3MTA4MTEyNjUsLTI4NDgyMzkwNCwtMzMxOTM2Mjc2LDY0
-ODAyMzcxMSwtMjYyMjMwNTg0LDI0MjU2MTE3NSwtMTA4ODI0OT
-UyMyw0MTgwMDg1NzMsOTczMTE4NTQ0LC00MDQwODIwOCw5NzUw
-MDk3OTRdfQ==
+eyJoaXN0b3J5IjpbNTAzNDA4MDYyLC0xODE2NzQyMDMwLC01OD
+Y0NjA2NTAsLTQyNTg3ODg0OSwtMTU2MTYyMTQ4NywtOTE1OTgz
+NTQ0LC0xOTEwODA0OTgyLC0yMDk4MjgxMjUyLDkzNDIwNTU2OC
+wtMTcxMDgxMTI2NSwtMjg0ODIzOTA0LC0zMzE5MzYyNzYsNjQ4
+MDIzNzExLC0yNjIyMzA1ODQsMjQyNTYxMTc1LC0xMDg4MjQ5NT
+IzLDQxODAwODU3Myw5NzMxMTg1NDQsLTQwNDA4MjA4LDk3NTAw
+OTc5NF19
 -->
