books/스프링 철저 입문/CH15 스프링 배치.md updated from https://stackedit.io/

--- a/books/스프링 철저 입문/CH15 스프링 배치.md
+++ b/books/스프링 철저 입문/CH15 스프링 배치.md
@@ -268,7 +268,7 @@ public class Mypartitioner implements Partitioner {
 		Map map = new HashMap<String, ExecutionContext>;
 		for(int i = 0; i< gridSize; i++){
 			ExecutionContext context = new ExecutionContext();
-			execution.putInt(PARTITION_NO_PROPERTY, i);
+			context.putInt(PARTITION_NO_PROPERTY, i);
 			map.put(PARTITION_KEY+i, context);
 		}
 		return map;
@@ -278,11 +278,11 @@ public class Mypartitioner implements Partitioner {
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MjQ0ODE2ODksLTY5NTQ5NDA0MSw1OT
-Y5Mzc0ODUsLTIwMjg2NTU4NDMsMTc3Mjk2OTM4NiwxNzc1ODcx
-OTY5LDEzMDgyNTY5NzEsLTEzMDQ2MzM0MTksLTI3MTU4ODA1MS
-wtNjI4NDY5NzIzLC0xODIxMDI0NDU4LC0xMjk4ODcyOTQyLDE1
-NTg4NDk2ODgsLTE0MDcwMTEzOTYsOTIyNTA5MzI4LDE3NDY4ND
-UzNTIsLTIxMTI4ODA5ODQsLTExMTE2NjE5MTQsOTk1MDg0MTYx
-LDE4NDE0NzcxNF19
+eyJoaXN0b3J5IjpbNTA3MTQ5NTY2LC0xNDI0NDgxNjg5LC02OT
+U0OTQwNDEsNTk2OTM3NDg1LC0yMDI4NjU1ODQzLDE3NzI5Njkz
+ODYsMTc3NTg3MTk2OSwxMzA4MjU2OTcxLC0xMzA0NjMzNDE5LC
+0yNzE1ODgwNTEsLTYyODQ2OTcyMywtMTgyMTAyNDQ1OCwtMTI5
+ODg3Mjk0MiwxNTU4ODQ5Njg4LC0xNDA3MDExMzk2LDkyMjUwOT
+MyOCwxNzQ2ODQ1MzUyLC0yMTEyODgwOTg0LC0xMTExNjYxOTE0
+LDk5NTA4NDE2MV19
 -->
