--- a/books/programming-interview/20200101_카카오커머.md
+++ b/books/programming-interview/20200101_카카오커머.md
@@ -2,7 +2,7 @@
 
 ## 자기 소개
 
-안녕하세요? 저는 어떻게 하면 좋은 백
+안녕하세요? 저는 어떻게 하면 좋은 백엔드 서비스를 제공할지에 관심이 많은 개발자 이승민 입니다. 저는 TMON에서 처음 서버 개발자로 
 
 
 
@@ -17,5 +17,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTMzMzI2MzkwXX0=
+eyJoaXN0b3J5IjpbMTE1ODE3NTQ0OV19
 -->
