books/programming-interview/20200101_카카오커머.md updated from https://stackedit.io/

--- a/books/programming-interview/20200101_카카오커머.md
+++ b/books/programming-interview/20200101_카카오커머.md
@@ -2,12 +2,12 @@
 
 ## 자기 소개
 
-안녕하세요? 저는 어떻게 하면 좋은 백엔드 서비스를 제공할지에 관심이 많습니다. 저는 TMON에서 처음 서버 개발자로 경력을 쌓기 시작했습니다. 3년 동안 크고 작은 개발을 했지만 다소 규모가 있고 재밌었던 프로젝트는 크게 선물하기 기능 추가, 평균배송소요일 계산등이 있습니다.
+안녕하세요? 저는 어떻게 하면 좋은 백엔드 서비스를 제공할지에 관심이 많습니다. 저는 TMON에서 3년 동안 주로 주문-결제 시점 이후 서비스인 배송, 클레임 도메인에서 개발 및 유지보수를 하였습니다. 크고 작은 개발을 했지만 다소 규모가 있고 재밌었던 프로젝트는 크게 선물하기 기능 추가, 평균배송소요일 계산등이 있습니다.
 
-저는 Spring Framework를 활용한 웹 서비스 개발에 관심이 많습니다. TMON 배송파트에서는 주로 주문-결제 시점 이후 서비스인 배송, 클레임 도메인에서 개발 및 유지보수를 하였습니다. `선물하기 서비스 개발` 프로젝트의 목표는 TMON의 배송 서비스를 비회원 고객도 이용 가능하도록 확장하는 것이었습니다. 프로젝트 개발 기간은 8주였고, 시니어 개발자 한 분과 개발을 진행하였습니다. 저의 주요 역할은 선물 DB Schema 설계와 이에 관한 REST API 개발 및 수정이었습니다. 서비스에 필요한 요구사항에 맞게 DB Schema를 계획하고 필요한 테이블을 생성하는 것은 어렵지 않았습니다. 하지만 기존의 서비스 중인 데이터 적재 API를 수정하는 것은 위험이 따랐습니다. 만약 데이터 적재 API에서 문제가 생기면 해당 주문 건으로는 배송, 클레임 서비스를 이용할 수 없게 되기 때문입니다. 게다가 기존 API는 적재할 데이터의 종류에 따라 트랜잭션 애너테이션이 붙거나 붙지 않은 메서드들이 혼재되어 복잡한 비즈니스 로직을 구성하고 있었습니다. 코드의 위험을 줄이고 신뢰를 높이기 위해 두 가지를 노력했습니다. `명확한 트랜잭션 사용`과 `단위 테스트 작성`이 그것입니다. 기존 코드를 분석하여 하나로 처리되어야 하는 트랜잭션은 올바른 트랜잭션 설정을 명시하도록 하였고, 불필요하게 트랜잭션에 포함되어 있던 로직은 트랜잭션에서 제외하였습니다. 또 `단위 테스트 작성`을 위해 각 핵심 기능에 테스트 코드를 작성하였습니다. TDD 방식의 개발에 숙달할 수 있는 좋은 경험이 되었습니다. 이러한 노력의 결과로 본 프로젝트는 성공적으로 유종의 미를 거두었고 TMON 서비스를 안정적으로 담당하게 되었습니다.
+`선물하기 서비스 개발` 프로젝트의 목표는 TMON의 배송 서비스를 비회원 고객도 이용 가능하도록 확장하는 것이었습니다. 프로젝트 개발 기간은 8주였고, 시니어 개발자 한 분과 개발을 진행하였습니다. 저의 주요 역할은 선물 DB Schema 설계와 이에 관한 REST API 개발 및 수정이었습니다. 서비스에 필요한 요구사항에 맞게 DB Schema를 계획하고 필요한 테이블을 생성하는 것은 어렵지 않았습니다. 하지만 기존의 서비스 중인 데이터 적재 API를 수정하는 것은 위험이 따랐습니다. 만약 데이터 적재 API에서 문제가 생기면 해당 주문 건으로는 배송, 클레임 서비스를 이용할 수 없게 되기 때문입니다. 게다가 기존 API는 적재할 데이터의 종류에 따라 트랜잭션 애너테이션이 붙거나 붙지 않은 메서드들이 혼재되어 복잡한 비즈니스 로직을 구성하고 있었습니다. 코드의 위험을 줄이고 신뢰를 높이기 위해 두 가지를 노력했습니다. `명확한 트랜잭션 사용`과 `단위 테스트 작성`이 그것입니다. 기존 코드를 분석하여 하나로 처리되어야 하는 트랜잭션은 올바른 트랜잭션 설정을 명시하도록 하였고, 불필요하게 트랜잭션에 포함되어 있던 로직은 트랜잭션에서 제외하였습니다. 또 `단위 테스트 작성`을 위해 각 핵심 기능에 테스트 코드를 작성하였습니다. TDD 방식의 개발에 숙달할 수 있는 좋은 경험이 되었습니다. 이러한 노력의 결과로 본 프로젝트는 성공적으로 유종의 미를 거두었고 TMON 서비스를 안정적으로 담당하게 되었습니다.
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjYwMTQwNzYyLDExNTgxNzU0NDldfQ==
+eyJoaXN0b3J5IjpbMzMzOTI4MjM0LDExNTgxNzU0NDldfQ==
 -->
