books/programming-interview/20200101_카카오커머.md updated from https://stackedit.io/

--- a/books/programming-interview/20200101_카카오커머.md
+++ b/books/programming-interview/20200101_카카오커머.md
@@ -8,7 +8,7 @@
 
 ### 장애처리
 
-인상적인 장애 처리건은 
+대다수의 장애는 잘못된 설정 딜에 의해서 발생하는  
 
 
 
@@ -17,5 +17,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcxMDE3MzYxOSwxMTU4MTc1NDQ5XX0=
+eyJoaXN0b3J5IjpbMzQyNTMxODE4LDExNTgxNzU0NDldfQ==
 -->
