books/programming-interview/20200101_카카오커머.md updated from https://stackedit.io/

--- a/books/programming-interview/20200101_카카오커머.md
+++ b/books/programming-interview/20200101_카카오커머.md
@@ -8,7 +8,9 @@
 
 ### 장애처리
 
-대다수의 장애는 잘못된 설정 딜에 의해서 발생하는  
+대다수의 장애는 잘못된 설정으로 발생하는 장애가 많았습니다. 
+자주 발생하는 
+데이터 보정 
 
 
 
@@ -17,5 +19,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzQyNTMxODE4LDExNTgxNzU0NDldfQ==
+eyJoaXN0b3J5IjpbLTM5NzY2ODA3NCwxMTU4MTc1NDQ5XX0=
 -->
