books/programming-interview/20200101_카카오커머.md updated from https://stackedit.io/

--- a/books/programming-interview/20200101_카카오커머.md
+++ b/books/programming-interview/20200101_카카오커머.md
@@ -2,7 +2,7 @@
 
 ## 자기 소개
 
-안녕하세요? 저는 어떻게 하면 좋은 백엔드 서비스를 제공할지에 관심이 많습니다. 저는 TMON에서 3년 동안 주로 주문-결제 시점 이후 서비스인 배송, 클레임 도메인에서 개발 및 유지보수를 하였습니다. 다소 규모가 있고 재밌었던 프로젝트는 크게 선물하기 기능, 평균배송소요일 계산 및 적재등이 있었습니다. 
+안녕하세요? 저는 어떻게 하면 좋은 백엔드 서비스를 제공할지에 관심이 많습니다. 저는 TMON에서 3년 동안 주로 주문-결제 시점 이후 서비스인 배송, 클레임 도메인에서 개발 및 유지보수를 하였습니다. 다소 규모가 있고 재밌었던 프로젝트는 크게 선물하기 기능, 평균배송소요일 계산 및 적재등이 있었습니다. TMON에서 경험을 살려서 이제 카카오 커머스에서 좋은 백엔드 서비스를 개발해 보고 싶습니다. 
 
 ## 프로젝트
 
@@ -20,6 +20,6 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNDUzODM2MTYsNTA2MDU5MjY2LC0xNj
-k5OTIzMzYzLDExNTgxNzU0NDldfQ==
+eyJoaXN0b3J5IjpbMTIzOTAyMTE3MCw1MDYwNTkyNjYsLTE2OT
+k5MjMzNjMsMTE1ODE3NTQ0OV19
 -->
