--- a/books/programming-interview/java/데이터베이스.md
+++ b/books/programming-interview/java/데이터베이스.md
@@ -1,5 +1,7 @@
 # 데이터베이스 
 
+## NOSQL
+
 SQL은 관계형 데이터베이스에 데이터를 관리하고 질의를 하기 위해 사용하는 선언전 언어다. 관계형 데이터 베이스의 표준 언어이며, 특정 데이터베이스 구현에 얽메이지 않는다. 
 
 >참조 무결성(Referential integrity)이란?
@@ -43,6 +45,8 @@ Statement stmt = connection.createStatement();
 ResultSet rs = stmt.executeQuery("");
 ```
 
+
+
 ## 인메모리 데이터베이스 테스팅
 
 데이터 베이스에 접속할 애플리케이션을 개발할때 데이터 베이스를 테스트 할 수 있는 상태로 유지하는 건 가끔 문제가 될 수 있다. 
@@ -58,5 +62,5 @@ ResultSet rs = stmt.executeQuery("");
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNjYwMjkwNTZdfQ==
+eyJoaXN0b3J5IjpbLTExMzY5NzU2MDVdfQ==
 -->
