books/programming-interview/java/자바기본.md updated from https://stackedit.io/

--- a/books/programming-interview/java/자바기본.md
+++ b/books/programming-interview/java/자바기본.md
@@ -29,6 +29,16 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 
 자바 5이전에는 수동으로 원시 타입을 참조 타입으로 바꿧는데 이를 박싱(Boxing)이라고 한다. 반대로 언박싱(Unboxing)은 참조 타입을 대응하는 원시 타입으로 바꾼다. 
 
+# 자바 변수
+
+
+## 저장 형태의 따른 분류
+기본형변수**와 **참조변수**로 나뉜다.
+**기본형변수**는 자료의 실제값을 저장한다.
+
+
+
+
 # 객체 이용하기
 
 원시 타입을 제외하면 자바 언어의 모든 변수들은 참조 타입이다. 이것들은 객체로 원시타입과 차이점은 빈객체를 의미하는 null 표현이 존재한다는 것이다.
@@ -176,5 +186,5 @@ Arrays.sort, Collections.sort 등 정렬 메서드를 사용할때는 정렬할 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTIyODAxNDcyXX0=
+eyJoaXN0b3J5IjpbMjQ5MjM0NjE2XX0=
 -->
