books/programming-interview/java/자바기본.md updated from https://stackedit.io/

--- a/books/programming-interview/java/자바기본.md
+++ b/books/programming-interview/java/자바기본.md
@@ -31,11 +31,15 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 
 # 자바 변수
 
-
 ## 저장 형태의 따른 분류
-기본형변수**와 **참조변수**로 나뉜다.
-**기본형변수**는 자료의 실제값을 저장한다.
 
+기본형 변수
+: 자료의 실제값을 저장한다.
+
+참조형 변수
+:  값이 저장되어 있는 주소값을 가진다.
+
+## 선언 위치에 따른 분류
 
 
 
@@ -186,5 +190,5 @@ Arrays.sort, Collections.sort 등 정렬 메서드를 사용할때는 정렬할 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjQ5MjM0NjE2XX0=
+eyJoaXN0b3J5IjpbLTE1OTM2NzM1OTldfQ==
 -->
