--- a/books/programming-interview/java/자바기본.md
+++ b/books/programming-interview/java/자바기본.md
@@ -41,9 +41,9 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 
 ## 선언 위치에 따른 분류
 
-클래스영역에 선언된 변수를  **멤버변수**라 하며  **멤버변수**와  **지역변수**
+클래스영역에 선언된 변수를  멤버변수, 그 외에 변수를 지역변수라 한다. 
 
-**멤버변수**는  **클래스변수**와  **인스턴스변수**를 통틀어서 부르는 용어이다.
+멤버변수 클래스변수와  인스턴스변수**를 통틀어서 부르는 용어이다.
 
 
 그중 앞에 static 이붙은 변수를  **클래스 변수**라고 한다.
@@ -197,5 +197,5 @@ Arrays.sort, Collections.sort 등 정렬 메서드를 사용할때는 정렬할 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIyMzU4MTA4OF19
+eyJoaXN0b3J5IjpbLTUzNzk1NDAzNF19
 -->
