--- a/books/programming-interview/java/자바기본.md
+++ b/books/programming-interview/java/자바기본.md
@@ -43,10 +43,51 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 
 클래스영역에 선언된 변수를  멤버변수, 그 외에 변수를 지역변수라 한다. 
 
-멤버변수 클래스변수와  인스턴스변수**를 통틀어서 부르는 용어이다.
-
+멤버변수 클래스변수와  인스턴스변수를 통틀어서 부르는 용어이다.
 
 그중 앞에 static 이붙은 변수를  **클래스 변수**라고 한다.
+
+**인스턴스변수**
+
+클래스 영역에 선언되고
+
+인스턴스 생성시 만들어진다.
+
+각각의 인스턴스마다 다른 값을 가질 수 있다.
+
+그러므로 인스턴스 생성이 필수이며 각 인스턴스마다 다른 값을 가져야 할 때 사용된다
+
+  
+
+  
+
+**클래스변수**
+
+인스턴스변수 앞에 static 을 붙이기만 하면 된다.
+
+인스턴스변수가 각각의 인스턴스마다 다른값을 가질 수 있는 거와 달리
+
+값을 공유하는 변수이다.
+
+클래스 로딩시 생성되며
+
+클래스이름.변수이름 이렇게 인스턴스 생성 필요없이 바로 쓸 수 있다.
+
+  
+
+**지역변수**
+
+메소드 내에 선언되며 메소드 호출시 생성되고 메소드가 종료되면 사라진다.
+
+  
+
+**매개변수**
+
+흔히 파라미터라고 불린다. 메소드에서 입력값을 받을 때가 있는데 그때 사용되는 변수를 매개변수라고 한다.
+
+매개변수도 매소드 내에 선언된 것으로 간주되므로 지역변수이다.
+
+인자값은 호출시 메소드입력부의 넣는 값이며 이값은 매개변수에 복사되어 대입된다.
 
 
 
@@ -197,5 +238,5 @@ Arrays.sort, Collections.sort 등 정렬 메서드를 사용할때는 정렬할 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUzNzk1NDAzNF19
+eyJoaXN0b3J5IjpbLTIwMDk0NTY2NjNdfQ==
 -->
