books/programming-interview/java/자바기본.md updated from https://stackedit.io/

--- a/books/programming-interview/java/자바기본.md
+++ b/books/programming-interview/java/자바기본.md
@@ -41,11 +41,14 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 
 ## 선언 위치에 따른 분류
 
+클래스 영역에 선언 : 멤버 변수 , 그외에 지역변수
+
 클래스영역에 선언된 변수를  멤버변수, 그 외에 변수를 지역변수라 한다. 
 
 멤버변수 클래스변수와  인스턴스변수를 통틀어서 부르는 용어이다.
 
-그중 앞에 static 이붙은 변수를  **클래스 변수**라고 한다.
+클래스 변수(정적 변수, static 변수)
+
 
 **인스턴스변수**
 
@@ -238,5 +241,5 @@ Arrays.sort, Collections.sort 등 정렬 메서드를 사용할때는 정렬할 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMDk0NTY2NjNdfQ==
+eyJoaXN0b3J5IjpbLTE3MzkzNDY2NjddfQ==
 -->
