books/programming-interview/java/자바기본.md updated from https://stackedit.io/

--- a/books/programming-interview/java/자바기본.md
+++ b/books/programming-interview/java/자바기본.md
@@ -50,21 +50,11 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 클래스 변수(정적 변수, static 변수)
 
 
-**인스턴스변수**
+인스턴스변수
+: 클래스 영역에 선언되고 참조형, 기본형 변수 모두가 해당한다. 
 
-클래스 영역에 선언되고
-
-인스턴스 생성시 만들어진다.
-
-각각의 인스턴스마다 다른 값을 가질 수 있다.
-
-그러므로 인스턴스 생성이 필수이며 각 인스턴스마다 다른 값을 가져야 할 때 사용된다
-
-  
-
-  
-
-**클래스변수**
+클래스변수
+: 
 
 인스턴스변수 앞에 static 을 붙이기만 하면 된다.
 
@@ -241,5 +231,5 @@ Arrays.sort, Collections.sort 등 정렬 메서드를 사용할때는 정렬할 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MzkzNDY2NjddfQ==
+eyJoaXN0b3J5IjpbMTI3NDExOTU3NF19
 -->
