books/programming-interview/java/자바기본.md updated from https://stackedit.io/

--- a/books/programming-interview/java/자바기본.md
+++ b/books/programming-interview/java/자바기본.md
@@ -41,7 +41,9 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 
 ## 선언 위치에 따른 분류
 
-클래스 영역에 선언 : 멤버 변수 , 그외에 지역변수
+멤버 변수
+: 클래스 영역에 선언 
+지역변수
 
 클래스영역에 선언된 변수를  멤버변수, 그 외에 변수를 지역변수라 한다. 
 
@@ -53,36 +55,11 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 인스턴스변수
 : 클래스 영역에 선언되고 참조형, 기본형 변수 모두가 해당한다. 
 
-클래스변수
-: 
-
-인스턴스변수 앞에 static 을 붙이기만 하면 된다.
-
-인스턴스변수가 각각의 인스턴스마다 다른값을 가질 수 있는 거와 달리
-
-값을 공유하는 변수이다.
-
-클래스 로딩시 생성되며
-
-클래스이름.변수이름 이렇게 인스턴스 생성 필요없이 바로 쓸 수 있다.
-
-  
+클래스변수(정적 변수)
+: 인스턴스변수 앞에 static을 붙이기만 하면 된다. 클래스 로딩시 생성되며 공유된다.
 
 **지역변수**
-
-메소드 내에 선언되며 메소드 호출시 생성되고 메소드가 종료되면 사라진다.
-
-  
-
-**매개변수**
-
-흔히 파라미터라고 불린다. 메소드에서 입력값을 받을 때가 있는데 그때 사용되는 변수를 매개변수라고 한다.
-
-매개변수도 매소드 내에 선언된 것으로 간주되므로 지역변수이다.
-
-인자값은 호출시 메소드입력부의 넣는 값이며 이값은 매개변수에 복사되어 대입된다.
-
-
+메소드 내에 선언되며 메소드 호출시 생성되고 메소드가 종료되면 사라진다. 매개변수도 매소드 내에 선언된 것으로 간주되므로 지역변수이다.
 
 # 객체 이용하기
 
@@ -231,5 +208,5 @@ Arrays.sort, Collections.sort 등 정렬 메서드를 사용할때는 정렬할 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI3NDExOTU3NF19
+eyJoaXN0b3J5IjpbLTUzODk0ODE2NV19
 -->
