books/programming-interview/java/자바기본.md updated from https://stackedit.io/

--- a/books/programming-interview/java/자바기본.md
+++ b/books/programming-interview/java/자바기본.md
@@ -43,14 +43,6 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 
 멤버 변수
 : 클래스영역에 선언된 변수를  멤버변수. 인스턴스변수 + 클래스변수 
-지역변수
-
-클래스영역에 선언된 변수를  멤버변수, 그 외에 변수를 지역변수라 한다. 
-
-
-
-클래스 변수(정적 변수, static 변수)
-
 
 인스턴스변수
 : 클래스 영역에 선언되고 참조형, 기본형 변수 모두가 해당한다. 
@@ -58,8 +50,8 @@ char는 unsigned이므로 0 ~ 65535 까지 담을수 있다.
 클래스변수(정적 변수)
 : 인스턴스변수 앞에 static을 붙이기만 하면 된다. 클래스 로딩시 생성되며 공유된다.
 
-**지역변수**
-메소드 내에 선언되며 메소드 호출시 생성되고 메소드가 종료되면 사라진다. 매개변수도 매소드 내에 선언된 것으로 간주되므로 지역변수이다.
+지역변수
+: 메소드 내에 선언되며 메소드 호출시 생성되고 메소드가 종료되면 사라진다. 매개변수도 매소드 내에 선언된 것으로 간주되므로 지역변수이다.
 
 # 객체 이용하기
 
@@ -208,5 +200,5 @@ Arrays.sort, Collections.sort 등 정렬 메서드를 사용할때는 정렬할 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUwMTAwNjY3MF19
+eyJoaXN0b3J5IjpbLTI5OTkyNjYyN119
 -->
