books/programming-interview/java/면접 질문 (100제).md updated from https://stackedit.io/

--- a/books/programming-interview/java/면접 질문 (100제).md
+++ b/books/programming-interview/java/면접 질문 (100제).md
@@ -1,9 +1,14 @@
 # 자바 
 
->Q1) 
+>Q1) 자바의 원시 타입은? 
+
+>Q2) 자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
+
+
+
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5ODYzMjIyNTRdfQ==
+eyJoaXN0b3J5IjpbMTE0MzQ5NTU2N119
 -->
