books/programming-interview/java/면접 질문 (100제).md updated from https://stackedit.io/

--- a/books/programming-interview/java/면접 질문 (100제).md
+++ b/books/programming-interview/java/면접 질문 (100제).md
@@ -4,11 +4,14 @@
 
 >Q2) 자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
 
+>Q3) 자바의 변수의 종류는? 
 
+>Q4) 자바의 클래스와 객체의 차이는? 
 
+>Q4) 자바의 클래스와 객체의 차이는? 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE0MzQ5NTU2N119
+eyJoaXN0b3J5IjpbMjAwMjM5NDg1MF19
 -->
