books/programming-interview/java/면접 질문 (100제).md updated from https://stackedit.io/

--- a/books/programming-interview/java/면접 질문 (100제).md
+++ b/books/programming-interview/java/면접 질문 (100제).md
@@ -8,11 +8,16 @@
 
 >Q4) 자바의 클래스와 객체의 차이는? 
 
->Q5) 자바의 클래스와 객체의 차이는? 
+>Q5) 자바의 메모리 구조는? 변수별로 저장되는 위치는?
+
+>Q6) 불변객체란? 왜 사용하는지?
+
+>Q6) 불변객체란? 왜 사용하는지?
+
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU0ODk5ODkyOV19
+eyJoaXN0b3J5IjpbMTMxNjcwNTc0XX0=
 -->
