--- a/books/programming-interview/java/면접 질문 (100제).md
+++ b/books/programming-interview/java/면접 질문 (100제).md
@@ -12,8 +12,10 @@
 
 >Q6) 불변객체란? 왜 사용하는지?
 
->Q7) final 키워드의 사용
-> final 키워드는 객체 참조에 어떤 영향을 미치는가?
+>Q7) final 키워드는? 어디에 사용하는지?
+
+>Q8) s
+
 
 객체에 선언하는 final 키워드는 원시타입에 선언하는 final 키워드와 동일하다. 즉 메모리 변수에 값이나 메모리 주소가 할당되면 그 값과 메모리 주소는 변하지 않는다. 변수에 할당된 메모리 주소는 변경하지 못하지만 객체 자체는 당연히 수정이 가능하다.
 
@@ -25,5 +27,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA3MjQzMDA0NV19
+eyJoaXN0b3J5IjpbLTU4MDY1OTcxMiwxMDcyNDMwMDQ1XX0=
 -->
