--- a/books/programming-interview/java/면접 질문 (100제).md
+++ b/books/programming-interview/java/면접 질문 (100제).md
@@ -14,18 +14,17 @@
 
 >Q7) final 키워드는? 어디에 사용하는지?
 
->Q8) s
+>Q8) static 키워드는? 
 
+>Q9) 접근 권한 수정자(private, package-private, protected, public)에 대해서 설명해보자.
 
-객체에 선언하는 final 키워드는 원시타입에 선언하는 final 키워드와 동일하다. 즉 메모리 변수에 값이나 메모리 주소가 할당되면 그 값과 메모리 주소는 변하지 않는다. 변수에 할당된 메모리 주소는 변경하지 못하지만 객체 자체는 당연히 수정이 가능하다.
+>Q10) 접근 권한 수정자(private, package-private, protected, public)에 대해서 설명해보자.
 
-> 객체의 가시성 수정자(visibility modifier)는 어떻게 작동하는가? 
-
-
+>
 
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU4MDY1OTcxMiwxMDcyNDMwMDQ1XX0=
+eyJoaXN0b3J5IjpbLTg3OTcwMDA1MywxMDcyNDMwMDQ1XX0=
 -->
