--- a/books/programming-interview/java/면접 질문 (100제).md
+++ b/books/programming-interview/java/면접 질문 (100제).md
@@ -18,13 +18,12 @@
 
 >Q9) 접근 권한 수정자(private, package-private, protected, public)에 대해서 설명해보자.
 
->Q10) 접근 권한 수정자(private, package-private, protected, public)에 대해서 설명해보자.
+>Q10) 다형성과 상속이란 무엇인가?
 
->
-
+>Q10) Overloading과 Overrider
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg3OTcwMDA1MywxMDcyNDMwMDQ1XX0=
+eyJoaXN0b3J5IjpbLTEyODcxNTI3MzQsMTA3MjQzMDA0NV19
 -->
