--- a/books/programming-interview/java/면접 질문 (100제).md
+++ b/books/programming-interview/java/면접 질문 (100제).md
@@ -20,10 +20,13 @@
 
 >Q10) 다형성과 상속이란 무엇인가?
 
->Q10) Overloading과 Overrider
+>Q10) Overloading과 Override의 차이?
 
+>Q11) Override 애노테이션은 어떤 역할을 하는가? 
+
+>Q12) String은 메모리에 어떻게 저장되는가? String 객체의 값을 변경할 수 있는가?
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyODcxNTI3MzQsMTA3MjQzMDA0NV19
+eyJoaXN0b3J5IjpbNjY3NzMxMzE4LDEwNzI0MzAwNDVdfQ==
 -->
