books/programming-interview/java/면접 질문 (100제).md updated from https://stackedit.io/

--- a/books/programming-interview/java/면접 질문 (100제).md
+++ b/books/programming-interview/java/면접 질문 (100제).md
@@ -24,9 +24,15 @@
 
 >Q11) Override 애노테이션은 어떤 역할을 하는가? 
 
->Q12) String은 메모리에 어떻게 저장되는가? String 객체의 값을 변경할 수 있는가?
+>Q12) String은 메모리에 어떻게 저장되는가? String 객체의 값을 변경할 수 있는가? 인터닝이란? 
+
+>Q13) 제네릭이란? 구상화(reified)한다는 건 어떤 의미인가? 
+
+>Q14) 자바의 예외처리 구조를 이루는 주요 클래스를 설명하라. 
+
+
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjY3NzMxMzE4LDEwNzI0MzAwNDVdfQ==
+eyJoaXN0b3J5IjpbMTI0MjQ5NzYzLDEwNzI0MzAwNDVdfQ==
 -->
