books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -1,48 +1,48 @@
 # 자바 
 
->Q) 자바의 원시 타입은? 
+>자바의 원시 타입은? 
 
->Q) 자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
+>자바의 Wrapper 클래스는? 그리고 AutoBoxing이란?
 
->Q) 자바의 변수의 종류는? 
+>자바의 변수의 종류는? 
 
->Q) 자바의 클래스와 객체의 차이는? 
+>자바의 클래스와 객체의 차이는? 
 
-> Q) JVM의 역할은? 그리고 GC(가비지 컬렉션)은  어떤 역할을 하는가?
+>JVM의 역할은? 그리고 GC(가비지 컬렉션)은  어떤 역할을 하는가?
 
->Q) 자바의 메모리 구조는? 변수별로 저장되는 위치는?
+>자바의 메모리 구조는? 변수별로 저장되는 위치는?
 
->Q) 불변객체란? 왜 사용하는지?
+>불변객체란? 왜 사용하는지?
 
->Q) final 키워드는? 어디에 사용하는지?
+>final 키워드는? 어디에 사용하는지?
 
->Q) static 키워드는? 
+>static 키워드는? 
 
->Q) 접근 권한 수정자(private, package-private, protected, public)에 대해서 설명해보자.
+>접근 권한 수정자(private, package-private, protected, public)에 대해서 설명해보자.
 
->Q) 다형성과 상속이란 무엇인가?
+>다형성과 상속이란 무엇인가?
 
->Q) Overloading과 Override의 차이? 그리고 Override 애노테이션은 어떤 역할을 하는가?
+>Overloading과 Override의 차이? 그리고 Override 애노테이션은 어떤 역할을 하는가?
 
->Q) String은 메모리에 어떻게 저장되는가? String 객체의 값을 변경할 수 있는가? 인터닝이란? 
+>String은 메모리에 어떻게 저장되는가? String 객체의 값을 변경할 수 있는가? 인터닝이란? 
 
->Q) 제네릭이란? 구상화(reified)한다는 건 어떤 의미인가? 
+>제네릭이란? 구상화(reified)한다는 건 어떤 의미인가? 
 
->Q) 자바의 예외처리 구조를 이루는 주요 클래스를 설명하라. Error와 Exception의 차이는?
+>자바의 예외처리 구조를 이루는 주요 클래스를 설명하라. Error와 Exception의 차이는?
 
-> Q) Comparable과 Comparator 인터페이스의 차이는?
+>Comparable과 Comparator 인터페이스의 차이는?
 
 # DataStrucutre
 
->Q) ArrayList와 LinkedList의 차이
+>ArrayList와 LinkedList의 차이
 
->Q) HashMap은 무엇이고 성능은? 최악의 경우를 가정하면 어떤가?
+>HashMap은 무엇이고 성능은? 최악의 경우를 가정하면 어떤가?
 
->Q) Collection에 대해서 아는 클래스를 최대한 설명해보라
+>Collection에 대해서 아는 클래스를 최대한 설명해보라
 
->Q) HashMap과 LinkedHashMap의 차이, ConcurrentHashMap의 차이는?
+>HashMap과 LinkedHashMap의 차이, ConcurrentHashMap의 차이는?
 
->Q) Tree란? HashMap과 TreeMap의 차이는?
+>Tree란? HashMap과 TreeMap의 차이는?
 
 # DesignPattern
 
@@ -56,16 +56,16 @@
 
 # Database
 
->Q) Indexing이란?
+>Indexing이란?
 
->Q) 트랜잭션이란? 
+>트랜잭션이란? 
 
 
->Q) PreparedStatement와 Statement의 차이는?
+>PreparedStatement와 Statement의 차이는?
 
->Q) 클러스터링과 리플레케이션의 차이에 대해서
+>클러스터링과 리플레케이션의 차이에 대해서
 
->Q) 샤딩(Shading)은?
+>샤딩(Shading)은?
 
 # 프레임워크 & 애플리케이션
 
@@ -117,5 +117,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzNjczNjM5M119
+eyJoaXN0b3J5IjpbMTUyMTY0MjMxMV19
 -->
