--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -96,8 +96,7 @@
 # 운영체제
 
 > 64비트 CPU와 32비트 CPU의 차이
-
-CPU 연산의 
+> 64bit CPU는 연산의 단위가 32bit에 두 배이다. 64bit CPU는 한 클럭에서 한번에 두개의 integer(4Byte)
 
 > 쓰레드와 프로세스의 차이
 
@@ -119,5 +118,5 @@ CPU 연산의
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzNzI2Mjg0NV19
+eyJoaXN0b3J5IjpbMTMxMTM3OTU5M119
 -->
