--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -96,7 +96,7 @@
 # 운영체제
 
 > 64비트 운영체제와 32비트 운영체제의 차이
-> 32비트 버전이 메모리를 4GB까지밖에 인식하지 못한다는 점이다. 비디오 카드도 포함된다. 보통 윈도우용 메모리는 총 3.5GB가 쓰인다. 예를 들어 4GB RAM과 1GB 비디오 카드가 있을 경우 윈도우용으로는 2.5GB 분량만 남게 된다.  
+> 32비트 버전이 메모리를 4GB까지밖에 인식하지 못한다. $2^32 = 2^{10 *2^10 *2^10$
 
 
 > 64비트 CPU와 32비트 CPU의 차이
@@ -123,5 +123,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIwNTIzNzA3NSwtNTkzODcxNzcwXX0=
+eyJoaXN0b3J5IjpbLTU0NzU5NDYyOSwtNTkzODcxNzcwXX0=
 -->
