books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -96,7 +96,7 @@
 # 운영체제
 
 > 64비트 운영체제와 32비트 운영체제의 차이
-> 32비트 버전이 메모리를 4GB까지밖에 인식하지 못한다. $2^32 = 2^{10 *2^10 *2^10$
+> 32비트 버전이 메모리를 4GB까지밖에 인식하지 못한다. $2^{32} =4 * 2^{10} *2^{10} *2^{10}()$
 
 
 > 64비트 CPU와 32비트 CPU의 차이
@@ -123,5 +123,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU0NzU5NDYyOSwtNTkzODcxNzcwXX0=
+eyJoaXN0b3J5IjpbMTU3ODY1MjI3LC01OTM4NzE3NzBdfQ==
 -->
