books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -96,7 +96,12 @@
 # 운영체제
 
 > 64비트 운영체제와 32비트 운영체제의 차이
-> 32비트 버전이 메모리를 4GB까지밖에 인식하지 못한다. $2^{32} =4 * 2^{10} *2^{10} *2^{10}()$
+> 32비트 버전이 메모리를 4GB까지밖에 인식하지 못한다. $2^{32} =4 * 2^{10} *2^{10} *2^{10}$
+> 64비트 운영체제의 데이터 처리량이 더 뛰어나다. 그 밖의 다른 차이점도 있지만, RAM 용량 인식의 한계가 대다수 사용자들의 가장 큰 걱정거리인 것 같다. 사실 마이크로소프트의 사용자 지원 센터를 보면 “64비트 윈도우 버전은 32비트 버전보다 대용량 RAM을 더욱 잘 활용합니다”라고만 쓰여 있다.  
+  
+원문보기:  
+[http://www.itworld.co.kr/news/100663#csidx32d57297460c1e9bb40b175ebd28aac](http://www.itworld.co.kr/news/100663#csidx32d57297460c1e9bb40b175ebd28aac) ![](http://linkback.itworld.co.kr/images/onebyone.gif?action_id=32d57297460c1e9bb40b175ebd28aac)
+
 
 
 > 64비트 CPU와 32비트 CPU의 차이
@@ -123,5 +128,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU3ODY1MjI3LC01OTM4NzE3NzBdfQ==
+eyJoaXN0b3J5IjpbLTE3ODM3NzkyODAsLTU5Mzg3MTc3MF19
 -->
