--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -102,7 +102,7 @@
 > 32bit CPU 라는 것은 엄밀히 말해 CPU 안에 있는 레지스터의 단위가 32bit라는 것이다. 이 레지스터가 표현할 수 있는 값의 범위가 CPU가 한번에 처리할 수 있는 주소값의 범위가 된다. 그러다
 > 
 > 64bit CPU는 연산의 단위가 32bit에 두 배이다. 64bit CPU는 한 클럭에서 한번에 두개의 integer(32bit) 정수값을 처리할 수 있다. 
-
+64비트가 32비트보다 처리할 수 있는 데이터가 많고, 그만큼 처리 속도도 높다는 것을 의미합니다.  
   
 > 쓰레드와 프로세스의 차이
 
@@ -124,6 +124,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk3NjE4MTEzMiwxNzcyNzY5ODgyLC01OT
+eyJoaXN0b3J5IjpbMTY1Njk5ODY2MiwxNzcyNzY5ODgyLC01OT
 M4NzE3NzBdfQ==
 -->
