books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -96,7 +96,7 @@
 # 운영체제
 
 > 32비트 컴퓨터와 64비트 컴퓨터의 차이
-> 32bit 컴퓨터는 CPU 안에 Register의 처리 단위가 32bit임을 말한다. 이 레지스터가 표현할 수 있는 값의 범위가 CPU가 한번에 처리할 수 있는 주소값의 범위가 된다. 그래서 32bit 컴퓨터는 메모리 주소를 4GB까지밖에 인식하지 못한다. $2^{32} =4 * 2^{10} *2^{10} *2^{10}$
+> 32bit 컴퓨터는 CPU 안에 Register의 처리 단위가 32bit임을 말한다. 이 레지스터가 표현할 수 있는 값의 범위에 따라 인식 주소값의 범위가 된다. 그래서 32bit 컴퓨터는 메모리 주소를 4GB까지밖에 인식하지 못한다. $2^{32} =4 * 2^{10} *2^{10} *2^{10}$
 > 따라서 64bit 컴퓨터는 인식가능한 메모리 공간이 훨씬 크고 단위시간당 처리할 수 있는 데이터가 많다.
   
 > 32bit CPU 라는 것은 엄밀히 말해 CPU 안에 있는 레지스터의 단위가 32bit라는 것이다. 이 레지스터가 표현할 수 있는 값의 범위가 CPU가 한번에 처리할 수 있는 주소값의 범위가 된다. 그러다
@@ -124,6 +124,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMwNzY0OTc2NiwtMTY2MTkwMzc2OCwxNj
+eyJoaXN0b3J5IjpbMTI4ODkwMTUyNywtMTY2MTkwMzc2OCwxNj
 U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
 -->
