--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -100,7 +100,7 @@
 > 따라서 64bit 컴퓨터는 인식가능한 메모리 공간이 훨씬 크고 단위시간당 처리할 수 있는 데이터가 많다.
   
 > 쓰레드와 프로세스의 차이
->프로세스는 메모리에 올라와 실행되고 있는 프로그램을 말한다.  쓰레드는 프로세스 내에서 필요한 
+>프로세스는 메모리에 올라와 실행되고 있는 프로그램을 말한다.  쓰레드는 프로세스 내에서 실제 필요한 작업을 수행하는 주체이다. 
 프로세스의 특정한 수행 경로
 프로세스가 할당받은 자원을 이용하는 실행의 단위
 https://gmlwjd9405.github.io/2018/09/14/process-vs-thread.html
@@ -125,6 +125,6 @@ https://gmlwjd9405.github.io/2018/09/14/process-vs-thread.html
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgxNDQ3MTM3MiwtMTY2MTkwMzc2OCwxNj
+eyJoaXN0b3J5IjpbLTQxMzY5MTIwMSwtMTY2MTkwMzc2OCwxNj
 U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
 -->
