books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -99,10 +99,14 @@
 > 32bit 컴퓨터는 CPU 안에 Register의 처리 단위가 32bit임을 말한다. 이 레지스터가 표현할 수 있는 값의 범위에 따라 인식 주소값의 범위가 된다. 그래서 32bit 컴퓨터는 메모리 주소를 4GB까지밖에 인식하지 못한다. $2^{32} =4 * 2^{10} *2^{10} *2^{10}$
 > 따라서 64bit 컴퓨터는 인식가능한 메모리 공간이 훨씬 크고 단위시간당 처리할 수 있는 데이터가 많다.
   
-> 쓰레드와 프로세스의 차이
+> 프로세스와 쓰레드의 차이
 >프로세스는 메모리에 올라와 실행되고 있는 프로그램을 말한다.  쓰레드는 프로세스 내에서 실제 필요한 작업을 수행하는 주체이다. 기본적으로 프로세스마다 최소 하나의 쓰레드를 가진다.
 
 > 데드락이란? 
+
+프로세스가 자원을 얻지 못해 다음 처리를 하지 못하는 상태로, ‘교착 상태’라고도 하며 시스템적으로 한정된 자원을 여러 곳에서 사용하려고 할 때 발생합니다.  
+  
+출처: [https://jwprogramming.tistory.com/12](https://jwprogramming.tistory.com/12) [개발자를 꿈꾸는 프로그래머]
 
 # 서버
 
@@ -120,6 +124,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNzQyOTc5MTUsLTE2NjE5MDM3NjgsMT
-Y1Njk5ODY2MiwxNzcyNzY5ODgyLC01OTM4NzE3NzBdfQ==
+eyJoaXN0b3J5IjpbLTg0MTQ1MDk1OSwtMTY2MTkwMzc2OCwxNj
+U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
 -->
