books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -103,8 +103,7 @@
 >프로세스는 메모리에 올라와 실행되고 있는 프로그램을 말한다.  쓰레드는 프로세스 내에서 실제 필요한 작업을 수행하는 주체이다. 기본적으로 프로세스마다 최소 하나의 쓰레드를 가진다.
 
 > 데드락이란? 
-
-프로세스가 자원을 얻지 못해 다음 처리를 하지 못하는 상태로, ‘교착 상태’라고도 하며 시스템적으로 한정된 자원을 여러 곳에서 사용하려고 할 때 발생합니다.  
+> 특정 프로세스가 작업에 필요한 자원을 얻지 못해 멈춰있는 상태로, ‘교착 상태’라고 한다. 
   
 출처: [https://jwprogramming.tistory.com/12](https://jwprogramming.tistory.com/12) [개발자를 꿈꾸는 프로그래머]
 
@@ -124,6 +123,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg0MTQ1MDk1OSwtMTY2MTkwMzc2OCwxNj
-U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
+eyJoaXN0b3J5IjpbODM1OTczNzcyLC0xNjYxOTAzNzY4LDE2NT
+Y5OTg2NjIsMTc3Mjc2OTg4MiwtNTkzODcxNzcwXX0=
 -->
