books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -103,7 +103,32 @@
 >프로세스는 메모리에 올라와 실행되고 있는 프로그램을 말한다.  쓰레드는 프로세스 내에서 실제 필요한 작업을 수행하는 주체이다. 기본적으로 프로세스마다 최소 하나의 쓰레드를 가진다.
 
 > 데드락이란? 
-> 특정 프로세스가 작업에 필요한 자원을 얻지 못해 멈춰있는 상태로, ‘교착 상태’라고 한다. 
+> 특정 프로세스가 작업에 필요한 자원을 얻지 못해 멈춰있는 상태로, ‘교착 상태’라고 한다. 멀티 프로그래밍 환경에서 발생할 수 있고 다행이도 데드락이 발생하는 조건이 정해져 있다.
+> - 교착 상태는 한 시스템 내에서 다음의 네 가지 조건이 동시에 성립 할 때 발생합니다
+
+- 따라서, 아래의 네 가지 조건 중 하나라도 성립하지 않도록 만든다면 교착 상태를 해결할 수 있습니다.
+
+1) 상호 배제 (Mutual exclusion)
+
+- 자원은 한 번에 한 프로세스만이 사용할 수 있어야 한다.
+
+2) 점유 대기 (Hold and wait)
+
+- 최소한 하나의 자원을 점유하고 있으면서 다른 프로세스에 할당되어 사용하고 있는 자원을 추가로 점유하기 위해 대기하는 프로세스가 있어야 한다.
+
+3) 비선점 (No preemption)
+
+- 다른 프로세스에 할당된 자원은 사용이 끝날 때까지 강제로 빼앗을 수 없어야 한다.
+
+4) 순환 대기 (Circular wait)
+
+- 프로세스의 집합 {P0, P1, ,…Pn}에서 P0는 P1이 점유한 자원을 대기하고 P1은 P2가 점유한 자원을 대기하고 P2…Pn-1은 Pn이 점유한 자원을 대기하며 Pn은 P0가 점유한 자원을 요구해야 한다.
+
+  
+  
+출처: [https://jwprogramming.tistory.com/12](https://jwprogramming.tistory.com/12) [개발자를 꿈꾸는 프로그래머]
+  
+출처: [https://jwprogramming.tistory.com/12](https://jwprogramming.tistory.com/12) [개발자를 꿈꾸는 프로그래머]
   
 출처: [https://jwprogramming.tistory.com/12](https://jwprogramming.tistory.com/12) [개발자를 꿈꾸는 프로그래머]
 
@@ -123,6 +148,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODM1OTczNzcyLC0xNjYxOTAzNzY4LDE2NT
-Y5OTg2NjIsMTc3Mjc2OTg4MiwtNTkzODcxNzcwXX0=
+eyJoaXN0b3J5IjpbLTc1OTM3NTgwMCwtMTY2MTkwMzc2OCwxNj
+U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
 -->
