--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -104,7 +104,8 @@
 
 > 데드락이란? 
 > 특정 프로세스가 작업에 필요한 자원을 얻지 못해 멈춰있는 상태로, ‘교착 상태’라고 한다. 멀티 프로그래밍 환경에서 발생할 수 있고 다행이도 데드락이 발생하는 조건이 정해져 있다.
-> - 교착 상태는 한 시스템 내에서 다음의 네 가지 조건이 동시에 성립 할 때 발생합니다
+> - 교착 상태는 한 시스템 내에서 Mutual Exclusion, Hold&Wait, No preemption, Circular wait이 모두 성립할때 발생한다.
+> 
 
 - 따라서, 아래의 네 가지 조건 중 하나라도 성립하지 않도록 만든다면 교착 상태를 해결할 수 있습니다.
 
@@ -148,6 +149,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc1OTM3NTgwMCwtMTY2MTkwMzc2OCwxNj
-U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
+eyJoaXN0b3J5IjpbLTc4NDY3NDU0LC0xNjYxOTAzNzY4LDE2NT
+Y5OTg2NjIsMTc3Mjc2OTg4MiwtNTkzODcxNzcwXX0=
 -->
