books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -105,10 +105,13 @@
 > 데드락이란? 
 > 특정 프로세스가 작업에 필요한 자원을 얻지 못해 멈춰있는 상태로, ‘교착 상태’라고 한다. 멀티 프로그래밍 환경에서 발생할 수 있다.
 
->데드락의 발생 조건은?
+>데드락의 발생 조건?
 >데드락은 운영체제에서에서 Mutual Exclusion, Hold&Wait, No preemption, Circular wait 조건이 모두 성립할때 발생한다.
-> 
-> 교착 상태 예방(Prevention) 및 회피(Avoidance)  
+
+>데드락 처리는?
+>데드락 예방(Prevention) 및 회피(Avoidance) 방법이 있다. 예방은 교착 상태 발생 조건 중 하나를 제거함으로써 해결하는 방법으로 
+  
+출처: [https://jwprogramming.tistory.com/12](https://jwprogramming.tistory.com/12) [개발자를 꿈꾸는 프로그래머] 
   
 출처: [https://jwprogramming.tistory.com/12](https://jwprogramming.tistory.com/12) [개발자를 꿈꾸는 프로그래머]
 
@@ -128,6 +131,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNzUxMDcxMTEsLTE2NjE5MDM3NjgsMT
-Y1Njk5ODY2MiwxNzcyNzY5ODgyLC01OTM4NzE3NzBdfQ==
+eyJoaXN0b3J5IjpbLTUxMTMxNzUyNiwtMTY2MTkwMzc2OCwxNj
+U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
 -->
