books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -109,11 +109,8 @@
 >데드락은 운영체제에서에서 Mutual Exclusion, Hold&Wait, No preemption, Circular wait 조건이 모두 성립할때 발생한다.
 
 >데드락 처리는?
->데드락 예방(Prevention) 및 회피(Avoidance) 방법이 있다. 예방은 교착 상태 발생 조건 중 하나를 제거함으로써 해결하는 방법으로 
+>데드락 예방(Prevention) 및 회피(Avoidance) 방법이 있다. 예방은 교착 상태 발생 조건 중 하나를 제거함으로써 해결하는 방법으로 자원의 낭비가 심하다. 
   
-출처: [https://jwprogramming.tistory.com/12](https://jwprogramming.tistory.com/12) [개발자를 꿈꾸는 프로그래머] 
-  
-출처: [https://jwprogramming.tistory.com/12](https://jwprogramming.tistory.com/12) [개발자를 꿈꾸는 프로그래머]
 
 # 서버
 
@@ -131,6 +128,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTUxMTMxNzUyNiwtMTY2MTkwMzc2OCwxNj
-U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
+eyJoaXN0b3J5IjpbNzcwNTY4NTAzLC0xNjYxOTAzNzY4LDE2NT
+Y5OTg2NjIsMTc3Mjc2OTg4MiwtNTkzODcxNzcwXX0=
 -->
