--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -109,7 +109,7 @@
 >데드락은 운영체제에서에서 Mutual Exclusion, Hold&Wait, No preemption, Circular wait 조건이 모두 성립할때 발생한다.
 
 >데드락 처리는?
->데드락 처리에는 예방(Prevention) 및 회피(Avoidance) 방법과 탐지 및 횝. 예방은 교착 상태 발생 조건 중 하나를 제거함으로써 해결하는 방법으로 자원의 낭비가 심하다. 회피는 데드락이 발생하면 
+>데드락 처리에는 예방(Prevention) 및 회피(Avoidance) 방법과 탐지 및 회복 방법이 있다. 예방은 교착 상태 발생 조건 중 하나를 제거함으로써 해결하는 방법으로 자원의 낭비가 심하다. 회피는 데드락이 발생하면 은행원 알고리즘 (Banker’s Algorithm)을 통해 피해간다.
 >
 
 교착 상태가 되지 않도록 보장하기 위하여 교착 상태를 예방하거나 회피하는 프로토콜을 이용하는 방법
@@ -139,6 +139,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMDczODM1NjQsLTE2NjE5MDM3NjgsMT
-Y1Njk5ODY2MiwxNzcyNzY5ODgyLC01OTM4NzE3NzBdfQ==
+eyJoaXN0b3J5IjpbLTM0OTEzODE4OSwtMTY2MTkwMzc2OCwxNj
+U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
 -->
