books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -111,12 +111,13 @@
 >데드락 처리는?
 >데드락 처리에는 예방(Prevention), 회피(Avoidance) 그리고 탐지 및 회복(Detection & Recover) 방법이 있다.
 >예방(Prevention)은 교착 상태 발생 조건 중 하나를 제거함으로써 해결하는 방법으로 자원의 낭비가 심하다. 
->회피(Avoidance는 데드락이 발생하면 은행원 알고리즘 (Banker’s Algorithm)을 통해 피해간다.
+>회피(Avoidance)는 은행원 알고리즘 (Banker’s Algorithm)으로 데드락이 발생하지 않을 상황에서만 자원을 할당해줌으로써 데드락을 피한다. 
 >탐지 및 회복(Detection & Recovery)는 자원 할당 그래프를 통해 교착 상태를 탐지(Detection)하고 교착 상태를 일으킨 프로세스를 종료하거나, 할당된 자원을 해제함으로써 회복(Recovery)을 한다.
->
+
 # 서버
 
 > WAS와 WEB Server의 차이
+> 
 
 >동기와 비동기처리의 차이 
 
@@ -130,6 +131,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg0MTUzMzYxNCwtMTY2MTkwMzc2OCwxNj
-U2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3MTc3MF19
+eyJoaXN0b3J5IjpbNzY2MjkyNTcyLC0xNjYxOTAzNzY4LDE2NT
+Y5OTg2NjIsMTc3Mjc2OTg4MiwtNTkzODcxNzcwXX0=
 -->
