--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -116,8 +116,9 @@
 
 # 서버
 
-> WAS와 WEB Server의 차이
-> 
+> WAS와 Web Server의 차이
+> WAS(WebApplication Server)의 약자로 동적인 웹 서비스를 제공하는데 사용한다. Tomcat이 대표적인 WAS이다.
+> Web Server는 정적인 웹 서비스를 제공하며, WAS에 비해 
 
 >동기와 비동기처리의 차이 
 
@@ -131,6 +132,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzY2MjkyNTcyLC0xNjYxOTAzNzY4LDE2NT
-Y5OTg2NjIsMTc3Mjc2OTg4MiwtNTkzODcxNzcwXX0=
+eyJoaXN0b3J5IjpbLTE4MDI4MjY0NDMsLTE2NjE5MDM3NjgsMT
+Y1Njk5ODY2MiwxNzcyNzY5ODgyLC01OTM4NzE3NzBdfQ==
 -->
