books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -118,7 +118,7 @@
 
 > WAS와 Web Server의 차이
 > WAS(WebApplication Server)의 약자로 동적인 웹 서비스를 제공하는데 사용한다. Tomcat이 대표적인 WAS이다.
-> Web Server는 정적인 웹 서비스를 제공하며, WAS에 비해 
+> Web Server는 정적인 웹 서비스를 제공하며, WAS에 비해 기능이 가볍다. 아파치 서버가 대표적인 WebServer이다. 
 
 >동기와 비동기처리의 차이 
 
@@ -132,6 +132,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MDI4MjY0NDMsLTE2NjE5MDM3NjgsMT
+eyJoaXN0b3J5IjpbLTEwODM4MDU4NTMsLTE2NjE5MDM3NjgsMT
 Y1Njk5ODY2MiwxNzcyNzY5ODgyLC01OTM4NzE3NzBdfQ==
 -->
