books/programming-interview/java/기술 면접 질문.md updated from https://stackedit.io/

--- a/books/programming-interview/java/기술 면접 질문.md
+++ b/books/programming-interview/java/기술 면접 질문.md
@@ -117,7 +117,8 @@
 # 서버
 
 > WAS와 Web Server의 차이
-> WAS(WebApplication Server)의 약자로 동적인 웹 서비스를 제공하기 위해 사용한다. Tomcat이 대표적인 WAS이다.
+> WAS(WebApplication Server)의 약자로 동적인 웹 서비스를 제공하기 위해 사용한다. 일반적으로 WAS 내부에 WebServer를 포함한다. 
+> Tomcat이 대표적인 WAS이다.
 > Web Server는 정적인 웹 서비스를 제공하며, WAS에 비해 기능이 가볍다. 아파치 서버, Nginx가 대표적이다. 
 
 >동기와 비동기처리의 차이 
@@ -132,7 +133,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg2MDY1NTY0LC0xMDgzODA1ODUzLC0xNj
-YxOTAzNzY4LDE2NTY5OTg2NjIsMTc3Mjc2OTg4MiwtNTkzODcx
-NzcwXX0=
+eyJoaXN0b3J5IjpbMjEyMzcxODQ1OSwtMTA4MzgwNTg1MywtMT
+Y2MTkwMzc2OCwxNjU2OTk4NjYyLDE3NzI3Njk4ODIsLTU5Mzg3
+MTc3MF19
 -->
